My personal work

--- a/001-git/html/index.html
+++ b/001-git/html/index.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="../js/index.js"></script>
   </head>
   <body>
-    <h1>chipmunk asked me to write my personal profile in header h1 before the first line of your personal profile</h1>
+    <h1>Hello Chinkmunk School</h1>
   </body>
 </html>
